# sc3-rdu

./: .boring  .gitmodules  CMakeLists.txt  Makefile  README  README.md  cabal.project  sc3-rdu.cabal  sc3-rdu.quark
.github/workflows/: ci.yml
Help/: dustR.help.lhs  rDelayMap.help.lhs  rDelaySet.help.lhs  rDelaySetB.help.lhs  rFreezer.help.lhs  rPlayTrace.help.lhs  rShufflerB.help.lhs  rShufflerL.help.lhs  randN.help.lhs
cpp/: .clang-format  Bezier.cpp  BufMemCpy.cpp  BufSort.cpp  DX7.cpp  DelayMap.cpp  DelaySet.cpp  DelaySet.h  DelaySetBuf.cpp  Demultiplexer.cpp  Dl.cpp  Dl.h  DurationGate.cpp  DustR.cpp  DustRange.cpp  Dx7.cpp  Dx7Env.cpp  EnvTrapezoid.cpp  ExpRandN.cpp  Freezer.cpp  Hold.cpp  IRandN.cpp  LagC.cpp  LinRandN.cpp  LoopSet.cpp  MVerb.cpp  MVerb.h  Makefile  Multiplexer.cpp  ObxdFilter.cpp  PV_DecayTable.cpp  PV_Split.cpp  PinkingFilterPk3.cpp  RBezier.cpp  RDF.cpp  RDF.h  RDL.cpp  RDL.h  RDU.h  RDX7.cpp  (+59 more)
cpp/Obxd/: AudioUtils.h  Filter.h  Makefile  obxd.diff
cpp/Obxd/Engine/: AudioUtils.h  Filter.h
cpp/dx7/: EngineMkI.cpp  EngineMkI.h  Makefile  dexed.patch  dx7note.cc  dx7note.h  exp2.h  freqlut.h  lfo.h  sin.h
ext/patch/: README  dexed-sc3-separate-0.9.4.patch  dexed-sc3-tuning-0.9.4.patch  dexed-tuning-0.9.4.patch
haskell/: dustR.help.lhs  rDelayMap.help.lhs  rFreezer.help.lhs  rShufflerL.help.lhs
help/: DustR.scd  RDelayMap.help.scd  RDelaySet.scd  RDelaySetB.scd  README  RFreezer.help.scd  RShufflerB.help.scd  RShufflerL.help.scd  RTraceRd.help.scd  dust-r.help.scm  dustR.help.lhs  expRandN.help.lhs  pv_split.help.lhs  r-delay-map.help.scm  rBezier.help.lhs  rDelayMap.help.lhs  rDelaySet.help.lhs  rDelaySetB.help.lhs  rFreezer.help.lhs  rPlayTrace.help.lhs  rShufflerB.help.lhs  rShufflerL.help.lhs  rTraceRd.help.lhs  randN.help.lhs  rdl.help.lhs  rpvDecay.help.lhs  rpvDecayTbl.help.lhs  tRandN.help.lhs  tScramble.help.lhs
help/lhs/: dustR.help.lhs  expRandN.help.lhs  pv_split.help.lhs  rBezier.help.lhs  rDX7.help.lhs  rDelayMap.help.lhs  rDelaySet.help.lhs  rDelaySetB.help.lhs  rFreezer.help.lhs  rLagC.help.lhs  rLoopSet.help.lhs  rObxdFilter.help.lhs  rPlayTrace.help.lhs  rShufflerB.help.lhs  rShufflerL.help.lhs  rTraceRd.help.lhs  randN.help.lhs  rdl.help.lhs  rdx7.help.lhs  rdx7Env.help.lhs  rpvDecayTbl.help.lhs  tRandN.help.lhs  tScramble.help.lhs
help/scd/: Asr.help.scd  Bezier.help.scd  BufMemCpy.help.scd  CurveGen.help.scd  Cutoff.help.scd  DX7.help.scd  DelayMap.help.scd  DelaySet.help.scd  DelaySetBuf.help.scd  DemandImpulseSequencer.help.scd  DemandSequencer.help.scd  Demultiplexer.help.scd  Dl.help.scd  DurationCycle.help.scd  DurationGate.help.scd  DurationPhasor.help.scd  DurationPulse.help.scd  DustR.help.scd  DustRange.help.scd  Dx7.help.scd  Dx7Env.help.scd  EnvTrapezoid.help.scd  ExpRandN.help.scd  Freezer.help.scd  Hold.help.scd  HoldSequence.help.scd  IRandN.help.scd  ImpulseSequencer.help.scd  LagC.help.scd  LinGen.help.scd  LinRandN.help.scd  LinSeg.help.scd  LoopSet.help.scd  MVerb.help.scd  Multiplexer.help.scd  ObxdFilter.help.scd  PV_DecayTable.help.scd  PV_Split.help.scd  Perc.help.scd  PingPongDelay.help.scd  (+75 more)
help/scm/: dust-r.help.scm  r-delay-map.help.scm
hs/: Makefile
hs/Help/: dustR.help.lhs  expRandN.help.lhs  pv_split.help.hs  rDelayMap.help.lhs  rDelaySetB.help.lhs  rFreezer.help.lhs  rPlayTrace.help.lhs  rShufflerB.help.lhs  rShufflerL.help.lhs  rTraceRd.help.lhs  randN.help.lhs  rdf.help.lhs  rdl.help.lhs  tScramble.help.lhs
hs/Sound/SC3/UGen/Bindings/DB/: RDU.hs
hs/Sound/SC3/UGen/Bindings/DB/RDU/: Monadic.hs
hs/Sound/Sc3/Server/Command/: MemCpy.hs
md/: notes.md  sc3-rdu.md  video.md
sc/: ADSR.sc  AR.sc  ASR.sc  Adsr.sc  Asr.sc  Bezier.sc  BufAlloc.sc  BufMemCpy.sc  Cc.sc  ControlIn.sc  ControlOut.sc  CurveGen.sc  Cutoff.sc  DX7.sc  DelayMap.sc  DelaySet.sc  DelaySetBuf.sc  DelayTap.sc  DelayWrite.sc  DemandImpulseSequencer.sc  DemandSequencer.sc  Demultiplexer.sc  Distance.sc  Dl.sc  DurationCycle.sc  DurationGate.sc  DurationPhasor.sc  DurationPulse.sc  DustRange.sc  Dx7.sc  Dx7Env.sc  DynRingzBank.sc  Env.ext.sc  EnvRelease.sc  EnvSpec.sc  EnvTrapezoid.sc  EqPan2.sc  ExpRandN.sc  Freezer.sc  Hold.sc  (+100 more)
sc/HelpSource/Classes/: RDelayMap.schelp  RDelaySet.schelp  RDelaySetB.schelp  RFreezer.schelp  RLoopSet.schelp  RShufflerB.schelp  RShufflerL.schelp  RTraceRd.schelp
sc/help/: RDelayMap.help.scd  RDelaySet.help.scd  RDelaySetB.help.scd  RFreezer.help.scd  RLoopSet.help.scd  RShufflerB.help.scd  RShufflerL.help.scd  RTraceRd.help.scd
scd/: revent-kbd.scd  revent-ui.scd
scheme/: DustR.help.scm  RDelayMap.help.scm  dust-r.help.scm  r-delay-map.help.scm
scm/: dust-r.help.scm  r-delay-map.help.scm
