cmake_minimum_required(VERSION 3.5)
set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/ext/cmake_modules ${CMAKE_MODULE_PATH})
set(CMAKE_CXX_STANDARD 17)

include(SuperColliderServerPlugin)
include(SuperColliderCompilerConfig)
include(InstallRequiredSystemLibraries)

sc_check_sc_path("${SC_PATH}")
set(SC_PATH "${SC_PATH}" CACHE PATH "Path to SuperCollider source. Relative paths are treated as relative to this script" FORCE)

project("sc3-rdu")
sc_do_initial_compiler_config()

option(SUPERNOVA "Build plugins for supernova" OFF)
option(SCSYNTH "Build plugins for scsynth" ON)
option(NATIVE "Optimize for native architecture" OFF)
option(STRICT "Use strict warning flags" OFF)
option(NOVA_SIMD "Build plugins with nova-simd support." OFF)

sc_add_server_plugin("sc3-rdu" "DustRange" "cpp/DustRange.cpp" "sc/DustRange.sc" "help/scd/DustRange.help.scd")
sc_add_server_plugin("sc3-rdu" "ExpRandN" "cpp/ExpRandN.cpp" "sc/ExpRandN.sc" "help/scd/ExpRandN.help.scd")
sc_add_server_plugin("sc3-rdu" "IRandN" "cpp/IRandN.cpp" "sc/IRandN.sc" "help/scd/IRandN.help.scd")
sc_add_server_plugin("sc3-rdu" "LinRandN" "cpp/LinRandN.cpp" "sc/LinRandN.sc" "help/scd/LinRandN.help.scd")
sc_add_server_plugin("sc3-rdu" "PV_Split" "cpp/PV_Split.cpp" "sc/PV_Split.sc" "help/scd/PV_Split.help.scd")
sc_add_server_plugin("sc3-rdu" "RBezier" "cpp/RBezier.cpp" "sc/RBezier.sc" "help/scd/RBezier.help.scd")
sc_add_server_plugin("sc3-rdu" "RDX7" "cpp/RDX7.cpp" "sc/RDX7.sc" "help/scd/RDX7.help.scd")
sc_add_server_plugin("sc3-rdu" "RDX7Env" "cpp/RDX7Env.cpp" "sc/RDX7Env.sc" "help/scd/RDX7Env.help.scd")
sc_add_server_plugin("sc3-rdu" "RDelayMap" "cpp/RDelayMap.cpp" "sc/RDelayMap.sc" "help/scd/RDelayMap.help.scd")
sc_add_server_plugin("sc3-rdu" "RDelaySet" "cpp/RDelaySet.cpp" "sc/RDelaySet.sc" "help/scd/RDelaySet.help.scd")
sc_add_server_plugin("sc3-rdu" "RDelaySetBuf" "cpp/RDelaySetBuf.cpp" "sc/RDelaySetBuf.sc" "help/scd/RDelaySetBuf.help.scd")
sc_add_server_plugin("sc3-rdu" "RFreezer" "cpp/RFreezer.cpp" "sc/RFreezer.sc" "help/scd/RFreezer.help.scd")
sc_add_server_plugin("sc3-rdu" "RLagC" "cpp/RLagC.cpp" "sc/RLagC.sc" "help/scd/RLagC.help.scd")
sc_add_server_plugin("sc3-rdu" "RLoopSet" "cpp/RLoopSet.cpp" "sc/RLoopSet.sc" "help/scd/RLoopSet.help.scd")
sc_add_server_plugin("sc3-rdu" "RObxdFilter" "cpp/RObxdFilter.cpp" "sc/RObxdFilter.sc" "help/scd/RObxdFilter.help.scd")
sc_add_server_plugin("sc3-rdu" "RPVDecayTbl" "cpp/RPVDecayTbl.cpp" "sc/RPVDecayTbl.sc" "help/scd/RPVDecayTbl.help.scd")
sc_add_server_plugin("sc3-rdu" "RSVFBP" "cpp/RSVFBP.cpp" "sc/RSVFBP.sc" "help/scd/RSVFBP.help.scd")
sc_add_server_plugin("sc3-rdu" "RSVFHP" "cpp/RSVFHP.cpp" "sc/RSVFHP.sc" "help/scd/RSVFHP.help.scd")
sc_add_server_plugin("sc3-rdu" "RSVFLP" "cpp/RSVFLP.cpp" "sc/RSVFLP.sc" "help/scd/RSVFLP.help.scd")
sc_add_server_plugin("sc3-rdu" "RShufflerB" "cpp/RShufflerB.cpp" "sc/RShufflerB.sc" "help/scd/RShufflerB.help.scd")
sc_add_server_plugin("sc3-rdu" "RShufflerL" "cpp/RShufflerL.cpp" "sc/RShufflerL.sc" "help/scd/RShufflerL.help.scd")
sc_add_server_plugin("sc3-rdu" "RSmplrIndex" "cpp/RSmplrIndex.cpp" "sc/RSmplrIndex.sc" "help/scd/RSmplrIndex.help.scd")
sc_add_server_plugin("sc3-rdu" "RTScramble" "cpp/RTScramble.cpp" "sc/RTScramble.sc" "help/scd/RTScramble.help.scd")
sc_add_server_plugin("sc3-rdu" "RTracePlay" "cpp/RTracePlay.cpp" "sc/RTracePlay.sc" "help/scd/RTracePlay.help.scd")
sc_add_server_plugin("sc3-rdu" "RTraceRd" "cpp/RTraceRd.cpp" "sc/RTraceRd.sc" "help/scd/RTraceRd.help.scd")
sc_add_server_plugin("sc3-rdu" "RandN" "cpp/RandN.cpp" "sc/RandN.sc" "help/scd/RandN.help.scd")
sc_add_server_plugin("sc3-rdu" "TExpRandN" "cpp/TExpRandN.cpp" "sc/TExpRandN.sc" "help/scd/TExpRandN.help.scd")
sc_add_server_plugin("sc3-rdu" "TLinRandN" "cpp/TLinRandN.cpp" "sc/TLinRandN.sc" "help/scd/TLinRandN.help.scd")
sc_add_server_plugin("sc3-rdu" "TRandN" "cpp/TRandN.cpp" "sc/TRandN.sc" "help/scd/TRandN.help.scd")

if (NOT WIN32)
  sc_add_server_plugin("sc3-rdu" "RDL" "cpp/RDL.cpp" "sc/RDL.sc" "help/scd/RDL.help.scd")
endif()
