cmake_minimum_required(VERSION 3.5)
set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/ext/cmake_modules ${CMAKE_MODULE_PATH})
set(CMAKE_CXX_STANDARD 17)

include(SuperColliderServerPlugin)
include(SuperColliderCompilerConfig)
include(InstallRequiredSystemLibraries)

sc_check_sc_path("${SC_PATH}")
set(SC_PATH "${SC_PATH}" CACHE PATH "Path to SuperCollider source. Relative paths are treated as relative to this script" FORCE)

project("sc3-rdu")
sc_do_initial_compiler_config()

option(SUPERNOVA "Build plugins for supernova" OFF)
option(SCSYNTH "Build plugins for scsynth" ON)
option(NATIVE "Optimize for native architecture" OFF)
option(STRICT "Use strict warning flags" OFF)
option(NOVA_SIMD "Build plugins with nova-simd support." OFF)

sc_add_server_plugin("sc3-rdu" "Bezier" "cpp/Bezier.cpp" "sc/Bezier.sc" "help/scd/Bezier.help.scd")
sc_add_server_plugin("sc3-rdu" "BufMemCpy" "cpp/BufMemCpy.cpp" "sc/BufMemCpy.sc" "help/scd/BufMemCpy.help.scd")
sc_add_server_plugin("sc3-rdu" "DelayMap" "cpp/DelayMap.cpp" "sc/DelayMap.sc" "help/scd/DelayMap.help.scd")
sc_add_server_plugin("sc3-rdu" "DelaySet" "cpp/DelaySet.cpp" "sc/DelaySet.sc" "help/scd/DelaySet.help.scd")
sc_add_server_plugin("sc3-rdu" "DelaySetBuf" "cpp/DelaySetBuf.cpp" "sc/DelaySetBuf.sc" "help/scd/DelaySetBuf.help.scd")
sc_add_server_plugin("sc3-rdu" "DustRange" "cpp/DustRange.cpp" "sc/DustRange.sc" "help/scd/DustRange.help.scd")
sc_add_server_plugin("sc3-rdu" "Dx7" "cpp/Dx7.cpp" "sc/Dx7.sc" "help/scd/Dx7.help.scd")
sc_add_server_plugin("sc3-rdu" "Dx7Env" "cpp/Dx7Env.cpp" "sc/Dx7Env.sc" "help/scd/Dx7Env.help.scd")
sc_add_server_plugin("sc3-rdu" "ExpRandN" "cpp/ExpRandN.cpp" "sc/ExpRandN.sc" "help/scd/ExpRandN.help.scd")
sc_add_server_plugin("sc3-rdu" "Freezer" "cpp/Freezer.cpp" "sc/Freezer.sc" "help/scd/Freezer.help.scd")
sc_add_server_plugin("sc3-rdu" "IRandN" "cpp/IRandN.cpp" "sc/IRandN.sc" "help/scd/IRandN.help.scd")
sc_add_server_plugin("sc3-rdu" "LagC" "cpp/LagC.cpp" "sc/LagC.sc" "help/scd/LagC.help.scd")
sc_add_server_plugin("sc3-rdu" "LinRandN" "cpp/LinRandN.cpp" "sc/LinRandN.sc" "help/scd/LinRandN.help.scd")
sc_add_server_plugin("sc3-rdu" "LoopSet" "cpp/LoopSet.cpp" "sc/LoopSet.sc" "help/scd/LoopSet.help.scd")
sc_add_server_plugin("sc3-rdu" "MVerb" "cpp/MVerb.cpp" "sc/MVerb.sc" "help/scd/MVerb.help.scd")
sc_add_server_plugin("sc3-rdu" "ObxdFilter" "cpp/ObxdFilter.cpp" "sc/ObxdFilter.sc" "help/scd/ObxdFilter.help.scd")
sc_add_server_plugin("sc3-rdu" "PV_DecayTable" "cpp/PV_DecayTable.cpp" "sc/PV_DecayTable.sc" "help/scd/PV_DecayTable.help.scd")
sc_add_server_plugin("sc3-rdu" "PV_Split" "cpp/PV_Split.cpp" "sc/PV_Split.sc" "help/scd/PV_Split.help.scd")
sc_add_server_plugin("sc3-rdu" "PinkingFilterPk3" "cpp/PinkingFilterPk3.cpp" "sc/PinkingFilterPk3.sc" "help/scd/PinkingFilterPk3.help.scd")
sc_add_server_plugin("sc3-rdu" "RandN" "cpp/RandN.cpp" "sc/RandN.sc" "help/scd/RandN.help.scd")
sc_add_server_plugin("sc3-rdu" "SamplerIndex" "cpp/SamplerIndex.cpp" "sc/SamplerIndex.sc" "help/scd/SamplerIndex.help.scd")
sc_add_server_plugin("sc3-rdu" "ShufflerB" "cpp/ShufflerB.cpp" "sc/ShufflerB.sc" "help/scd/ShufflerB.help.scd")
sc_add_server_plugin("sc3-rdu" "ShufflerL" "cpp/ShufflerL.cpp" "sc/ShufflerL.sc" "help/scd/ShufflerL.help.scd")
sc_add_server_plugin("sc3-rdu" "SvfBp" "cpp/SvfBp.cpp" "sc/SvfBp.sc" "help/scd/SvfBp.help.scd")
sc_add_server_plugin("sc3-rdu" "SvfHp" "cpp/SvfHp.cpp" "sc/SvfHp.sc" "help/scd/SvfHp.help.scd")
sc_add_server_plugin("sc3-rdu" "SvfLp" "cpp/SvfLp.cpp" "sc/SvfLp.sc" "help/scd/SvfLp.help.scd")
sc_add_server_plugin("sc3-rdu" "TExpRandN" "cpp/TExpRandN.cpp" "sc/TExpRandN.sc" "help/scd/TExpRandN.help.scd")
sc_add_server_plugin("sc3-rdu" "TLinRand" "cpp/TLinRand.cpp" "sc/TLinRand.sc" "help/scd/TLinRand.help.scd")
sc_add_server_plugin("sc3-rdu" "TLinRandN" "cpp/TLinRandN.cpp" "sc/TLinRandN.sc" "help/scd/TLinRandN.help.scd")
sc_add_server_plugin("sc3-rdu" "TRandN" "cpp/TRandN.cpp" "sc/TRandN.sc" "help/scd/TRandN.help.scd")
sc_add_server_plugin("sc3-rdu" "TScramble" "cpp/TScramble.cpp" "sc/TScramble.sc" "help/scd/TScramble.help.scd")
sc_add_server_plugin("sc3-rdu" "TSort" "cpp/TSort.cpp" "sc/TSort.sc" "help/scd/TSort.help.scd")
sc_add_server_plugin("sc3-rdu" "TracePlay" "cpp/TracePlay.cpp" "sc/TracePlay.sc" "help/scd/TracePlay.help.scd")
sc_add_server_plugin("sc3-rdu" "TraceRead" "cpp/TraceRead.cpp" "sc/TraceRead.sc" "help/scd/TraceRead.help.scd")
sc_add_server_plugin("sc3-rdu" "TrigAllocator" "cpp/TrigAllocator.cpp" "sc/TrigAllocator.sc" "help/scd/TrigAllocator.help.scd")

if (NOT WIN32)
  sc_add_server_plugin("sc3-rdu" "Dl" "cpp/Dl.cpp" "sc/Dl.sc" "help/scd/Dl.help.scd")
endif()
