cabal-version:     2.4
Name:              sc3-rdu
Version:           0.20
Synopsis:          Haskell bindings to sc3-rdu (sc3 rd ugens)
Description:       Haskell bindings to sc3-rdu (sc3 rd ugens)
License:           GPL-3.0-only
Category:          Sound
Copyright:         (c) Rohan Drape, 1998-2021
Author:            Rohan Drape
Maintainer:        rd@slavepianos.org
Stability:         Experimental
Homepage:          http://rohandrape.net/t/sc3-rdu
Tested-With:       GHC == 8.8.4
Build-Type:        Simple

Data-files:        README.md

Library
  hs-source-dirs:  hs
  Build-Depends:   base == 4.*,
                   hsc3 == 0.20.*,
                   hsc3-db == 0.20.*
  default-language:Haskell2010
  GHC-Options:     -Wall -fwarn-tabs
  Exposed-modules: Sound.SC3.UGen.External.RDU
                   Sound.SC3.UGen.Bindings.DB.RDU
                   Sound.SC3.UGen.Bindings.DB.RDU.Monadic

Source-Repository  head
  Type:            git
  Location:        https://gitlab.com/rd--/sc3-rdu
